#310 add support for new auth org structure (#314)
add support for new auth org structure

Related with #310
Co-authored-by: SvetlanaDorokhova <sveta_d@list.ru>